<resources>
    <string name="app_name">Bluetooth Esp32</string>
    <string name="enter_device_name">Ingresa el nombre del dispositivo</string>
    <string name="connect">Conectar</string>
    <string name="received_data">Datos Recibidos</string>
    <string name="select_a_device">Selecciona un dispositivo</string>
    <string name="device_info">Info del Dispositivo</string>
    <string name="bt_disabled">Por favor, activa el Bluetooth</string>
    <string name="no_device">Por favor, ingresa o selecciona un dispositivo</string>
    <string name="connected_to">Conectado a</string>
    <string name="conn_failed">Conexión fallida</string>
    <string name="not_paired">Dispositivo no vinculado</string>
    <string name="not_found">Dispositivo no encontrado</string>
    <string name="no_device_found">No se encontró el dispositivo</string>
    <string name="hello_android">¡Hola desde Android!</string>
    <string name="device_name_label">Nombre del Dispositivo:</string>
    <string name="device_address_label">Dirección del Dispositivo:</string>
    <string name="device_type_label">Tipo de Dispositivo:</string>
    <string name="bond_state_label">Estado de Vinculación:</string>
</resources>